# ToolBox

./: .gitignore  CMakeGui.bat  CMakeGuiToolBox.bat  NextSteps.md  ToolBox.tdl  VisualStudio2013_AllSettings.vssettings  VisualStudio2013_WindowSettings.vssettings  clean.bat
Log/: CMakeLists.txt  Log.cpp  LogHelper.cpp
Log/API/: Log.h  LogAPI.h  LogHelper.h
src/: CMakeLists.txt
src/ArgumentPrinter/: CMakeLists.txt  Notes.md  main.cpp
src/AutoHotKeyHelper/: AutoHotKeyHelper.cpp  AutoHotKeyHelper.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md
src/Base64Converter/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/Bazar/: ArticleReturn.cpp  ArticleReturn.h  CMakeLists.txt  Evaluation.cpp  Evaluation.h  EvaluationByCategory.cpp  EvaluationByCategory.h  EvaluationView.cpp  EvaluationView.h  ExcelExport.cpp  ExcelExport.h  PasswordInput.cpp  PasswordInput.h  PrizeCorrection.cpp  PrizeCorrection.h  SalesView.cpp  SalesView.h  Settings.cpp  Settings.h  TuKiBasar.cpp  TuKiBasar.h
src/CMake/: CodeCleaner.cmake  ProjectTemplate.cmake  Qt.cmake  QtApplication.cmake  QtDll.cmake  QtExe.cmake  QtLibrary.cmake
src/CMakeHelper/: CMakeHelper.cpp  CMakeHelper.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md
src/CallStackCleaner/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md  main.cpp
src/ChartTest/: chart.cpp  chart.h  main.cpp
src/Chuck/: CMakeLists.txt  InstanceManager.cpp  InstanceManager.h  MainWindow.cpp  MainWindow.h  NumberDisplay.cpp  NumberDisplay.h  NumberDisplay.ui  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Widget.cpp  Widget.h  Widget.ui  qcustomplot.cpp  qcustomplot.h
src/ClassAnalyzer/: CMakeLists.txt  ClassAnalyzer.cpp  ClassAnalyzer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md
src/CodeCleaner/: BlockCodeFormatter.cpp  BlockCodeFormatter.h  CMakeLists.txt  CodeCleaner.cpp  CodeCleaner.h  ConsoleHelper.cpp  ConsoleHelper.h  Notes.md  Options.cpp  Options.h  StringHandler.cpp  StringHandler.h  main.cpp
src/CodeCreator/: CMakeLists.txt  Class.cpp  Class.h  CodeCreator.cpp  CodeCreator.h  CodeCreator.ui  CodeHelper.cpp  CodeHelper.h  Declaration.cpp  Declaration.h  Declarations.cpp  Declarations.h  GeneratorAbstractFactory.cpp  GeneratorAbstractFactory.h  GeneratorClass.cpp  GeneratorClass.h  GeneratorClass.ui  GeneratorConsoleApplication.cpp  GeneratorConsoleApplication.h  GeneratorConsoleApplication.ui  GeneratorDecorator.cpp  GeneratorDecorator.h  GeneratorDll.cpp  GeneratorDll.h  GeneratorDll.ui  GeneratorExperimentElement.cpp  GeneratorExperimentElement.h  GeneratorExperimentElement.ui  GeneratorI.h  GeneratorInterface.cpp  GeneratorInterface.h  GeneratorNamespace.cpp  GeneratorNamespace.h  GeneratorNamespace.ui  GeneratorObserver.cpp  GeneratorObserver.h  GeneratorQtConsoleApplication.cpp  GeneratorQtConsoleApplication.h  GeneratorQtConsoleApplication.ui  GeneratorQtDesignerWidget.cpp  (+60 more)
src/CodeDuplicator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md
src/CodeEdit/: CMakeLists.txt  CodeEdit.cpp  CodeEdit.ui  CodeEditDesignerPlugin.cpp  CodeEditDesignerPlugin.h  CppHighlighter.cpp  CppHighlighter.h  Notes.md  SimpleHtmlHighlighter.cpp  SimpleHtmlHighlighter.h  SmlHighlighter.cpp  SmlHighlighter.h  XmlHighlighter.cpp  XmlHighlighter.h  XmlParser.cpp  XmlParser.h
src/DailyNotes/: CMakeLists.txt  DailyNotes.cpp  DailyNotes.h  DailyNotes.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/DevelopmentHelper/: BlockCodeFormatter.cpp  BlockCodeFormatter.h  CMakeLists.txt  CaseChanger.cpp  CaseChanger.h  CaseChanger.ui  ChunkConverter.cpp  ChunkConverter.h  ClipboardManager.cpp  ClipboardManager.h  CodeAssistant.cpp  CodeAssistant.h  ColorPicker.cpp  ColorPicker.h  ConnectionHelper.cpp  ConnectionHelper.h  Converter.cpp  Converter.h  Converter.ui  ConverterBase64.cpp  ConverterBase64.h  ConverterBase64.ui  CryptoHelper.cpp  CryptoHelper.h  DateTimeAdder.cpp  DateTimeAdder.h  DateTimeHelper.cpp  DateTimeHelper.h  DateTimeHelper.ui  DevelopmentHelper.cpp  DevelopmentHelper.h  EnumHelper.cpp  EnumHelper.h  FindInContainer.cpp  FindInContainer.h  ForLoopCreator.cpp  ForLoopCreator.h  ForLoopCreator.ui  HtmlEditor.cpp  HtmlEditor.h  (+22 more)
src/DirectorySwitcher/: CMakeLists.txt  InfoFile.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md  main.cpp
src/ExperimentEditor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md  main.cpp
src/FileToImageLink/: CMakeLists.txt
src/GeometrySaver/: CMakeLists.txt  GeometrySaver.cpp  GeometrySaver.h  MainWindow.cpp  MainWindow.h  Notes.md  main.cpp
src/GridLayoutable/: CMakeLists.txt  GridLayoutable.cpp  GridLayoutablesConnector.cpp  GridLayoutablesConnector.h
src/GridLayouter/: CMakeLists.txt  GridLayouter.cpp  GridLayouter.ui  GridLayouterDesignerPlugin.cpp  GridLayouterDesignerPlugin.h
src/GuiStyleTester/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md  PathSelector.cpp  PathSelector.h  PathSelector.ui  main.cpp
src/ImageProcessing/: CMakeLists.txt  ImageDisplay.cpp  ImageDisplay.h  MainWindow.cpp  MainWindow.h  TeachableRectangle.h
src/IncludeFinder/: CMakeLists.txt  IncludeFinder.cpp  IncludeFinder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md
src/JsonModel/: JsonModel.cpp  JsonModel.h  JsonModel.pro  JsonModelEdit.cpp  JsonModelEdit.h  JsonModelEdit.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProxyModel.cpp  ProxyModel.h
src/LinkCreator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notes.md  main.cpp
src/ListEdit/: CMakeLists.txt  ListEdit.cpp  ListEdit.ui  ListEditDesignerPlugin.cpp  ListEditDesignerPlugin.h
src/ListEditTest/: CMakeLists.txt  ListEditTest.cpp  ListEditTest.h  ListEditTest.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/LogConsole/: CMakeLists.txt  LogConsole.cpp  LogConsole.rc  LogConsole.ui  LogConsoleDesignerPlugin.cpp  LogConsoleDesignerPlugin.h
src/LogFileMerger/: CMakeLists.txt  Notes.md  main.cpp
src/LogViewer/: CMakeLists.txt  LogViewer.cpp  LogViewer.h  (+7 more)
(+485 files in other folders)
