cmake_minimum_required (VERSION 3.3.2)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)

project(ToolBox)

set(OutputDirRelease ${CMAKE_BINARY_DIR}/../bin)
set(OutputDirDebug ${CMAKE_BINARY_DIR}/../debug)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OutputDirRelease})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OutputDirDebug})

set(QtBuilderWorkingDir ${OutputDirDebug})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if(NOT CMAKE_DEBUG_POSTFIX)
  set(CMAKE_DEBUG_POSTFIX d)
endif()

include(CMake/Qt.cmake)

add_subdirectory(ArgumentPrinter)
add_subdirectory(AutoHotKeyHelper)
add_subdirectory(Base64Converter)
add_subdirectory(CMakeHelper)
add_subdirectory(CallStackCleaner)
add_subdirectory(Chuck)
add_subdirectory(CodeCleaner)
add_subdirectory(CodeCreator)
add_subdirectory(CodeDuplicator)
add_subdirectory(CodeEdit)
add_subdirectory(DevelopmentHelper)
add_subdirectory(DirectorySwitcher)
add_subdirectory(ExperimentEditor)
add_subdirectory(FileToImageLink)
add_subdirectory(GeometrySaver)
add_subdirectory(GridLayoutable)
add_subdirectory(GuiStyleTester)
add_subdirectory(ImageProcessing)
add_subdirectory(IncludeFinder)
add_subdirectory(LinkCreator)
add_subdirectory(ListEdit)
add_subdirectory(ListEditTest)
add_subdirectory(LogConsole)
add_subdirectory(LogFileMerger)
add_subdirectory(LogViewer)
add_subdirectory(PathList)
add_subdirectory(PathSelector)
add_subdirectory(PhoneBook)
add_subdirectory(PlainClipboard)
add_subdirectory(ProcessStarter)
add_subdirectory(QtBuildHelper)
add_subdirectory(QtConnectionHelper)
add_subdirectory(QtHelper)
add_subdirectory(QtMetaMethod)
add_subdirectory(Shared)
add_subdirectory(SharedResources)
add_subdirectory(SharedTest)
add_subdirectory(SitAndStandTimer)
add_subdirectory(SvnUpdateFilter)
add_subdirectory(TextConverter)
add_subdirectory(Timer)
add_subdirectory(TreeEdit)
add_subdirectory(VisualStudioOutputSorter)
add_subdirectory(VisualStudioSearchResultFilter)
add_subdirectory(NumberEdit)
add_subdirectory(NumberEditTest)
add_subdirectory(SimpleSwitch)
add_subdirectory(RemoteObjectsServer)
add_subdirectory(RemoteObjectsClient)

# TODO switch to Qt WebEngine
#add_subdirectory(Bazar)
#add_subdirectory(DailyNotes)
#add_subdirectory(SmlEdit)
#add_subdirectory(SmlEditor)